apps/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prowlarr-config-pvc
      - name: data
        nfs:
          server: 10.0.0.50 #   REPLACE_ME 提交成自己的nfs共享的ip地址
          path: /mnt/nfs/media # REPLACE_ME 提交成自己的nfs共享的media目录
